devops/kubernetes/exemple/rentahouse/wshabitation/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: wshabitation-service
  namespace: rentahouse
  labels:
    app.kubernetes.io/instance: prometheus-stack
    app: wshabitation-service
    release: prometheus-stack
    jobLabel: wshabitation  
spec:
  selector: 
    app: wshabitation
      #    app.kubernetes.io/instance: prometheus-stack
  type: NodePort  
  ports:
    - name: "wshabitation-metrics"
      port: 8080
      targetPort: 8080
      nodePort: 31011
